# tirtha

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: pages.yml  test.yml
demo/: README.md  tirtha.tape
docs/: blue_sky_submission.md  methodology.md  plain_english.md  references.md
docs/cases/: index.json
docs/cases/bgd/: case.json  metrics.json  summary.txt
docs/cases/mwi/: case.json  metrics.json  summary.txt
docs/cases/sle/: case.json  metrics.json  summary.txt
docs/cases/usa-nyc-brownsville/: case.json  metrics.json  summary.txt
notebooks/: 00_smoke_test.py  01_terramind_smoke.py  02_bench_vs_map.py  03_showcase.py
scripts/: build_country_cases.py
src/friction/: __init__.py  cli.py
src/friction/data/: __init__.py
src/friction/eval/: __init__.py
src/friction/fusion/: __init__.py
src/friction/model/: __init__.py
src/friction/routing/: __init__.py
src/tirtha/: __init__.py  cli.py  data.py  embed.py  friction.py  graph.py  io.py  metrics.py  pipeline.py  route.py  viz.py
tests/: test_friction.py  test_graph.py  test_metrics.py  test_route.py
