[project]
name = "friction"
version = "0.1.0"
description = "Open, reproducible travel-time-to-healthcare mapping via TerraMind friction estimation + OSMnx road-graph fusion."
authors = [
    { name = "Adam Munawar Rahman", email = "msrahmanadam@gmail.com" }
]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = ["geospatial", "accessibility", "healthcare", "remote-sensing", "foundation-models", "terramind", "osmnx"]
dependencies = [
    # Geospatial core
    "geopandas>=1.0",
    "shapely>=2.0",
    "rasterio>=1.3",
    "pyproj>=3.6",
    # Routing
    "osmnx>=2.0",
    "networkx>=3.2",
    "scikit-image>=0.24",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    "requests>=2.31",
    # Notebooks
    "marimo>=0.10",
    # Viz
    "keplergl>=0.3",
    "matplotlib>=3.8",
    # CLI
    "typer>=0.12",
    "pystac-client>=0.9.0",
    "planetary-computer>=1.0.0",
    "rioxarray>=0.22.0",
    "xarray>=2026.4.0",
    "odc-geo>=0.5.1",
    "odc-stac>=0.5.2",
]

[project.optional-dependencies]
ml = [
    "torch>=2.3",
    "terratorch",
    "huggingface-hub>=0.24",
]
dev = [
    "ruff>=0.6",
    "pytest>=8.0",
    "ipython>=8.0",
]

[project.scripts]
friction = "friction.cli:app"

[build-system]
requires = ["uv_build>=0.11.14,<0.12.0"]
build-backend = "uv_build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
